force-app/main/default/objects/cgcloud__Promotion_Attachment_Link__c/cgcloud__Promotion_Attachment_Link__c.object-meta.xml
<CustomObject>
    <description>Relationship between promotion and promotion attachment.</description>
    <label>Promotion Attachment Link</label>
    <nameField>
        <displayFormat>PAL-{000000}</displayFormat>
        <label>Promotion Attachment Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Attachment Link</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>