force-app/main/default/objects/cgcloud__Promotion_Attachment_Link__c/fields/cgcloud__Parent_Promotion_Attachment_Link__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Promotion_Attachment_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the Parent Promotion Attachment Link record</description>
    <label>Parent Promotion Attachment Link</label>
    <referenceTo>cgcloud__Promotion_Attachment_Link__c</referenceTo>
    <relationshipLabel>Child Promotion Attachment Links</relationshipLabel>
    <relationshipName>ChildPromotionAttachmentLinks</relationshipName>
    <type>Lookup</type>
</CustomField>