force-app/main/default/objects/cgcloud__Promotion_Attachment_Link__c/fields/cgcloud__Promotion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion__c</fullName>
    <label>Promotion</label>
    <referenceTo>cgcloud__Promotion__c</referenceTo>
    <relationshipLabel>Promotion Attachment Link</relationshipLabel>
    <relationshipName>Promotion_Attachment_Link</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>