force-app/main/default/objects/cgcloud__Promotion_Attachment_Link__c/fields/cgcloud__Promotion_Attachment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Attachment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Attachment</label>
    <referenceTo>cgcloud__Promotion_Attachment__c</referenceTo>
    <relationshipLabel>Promotion Attachment Link</relationshipLabel>
    <relationshipName>Promotion_Attachment_Link</relationshipName>
    <type>Lookup</type>
</CustomField>