force-app/main/default/objects/cgcloud__Promotion_Attachment_Link__c/validationRules/cgcloud__Promotion_Attachment_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Promotion_Attachment_Required</fullName>
    <active>true</active>
    <description>The Promotion Attachement can&apos;t be empty.</description>
    <errorConditionFormula>ISBLANK( cgcloud__Promotion_Attachment__c )</errorConditionFormula>
    <errorMessage>The Promotion Attachement can&apos;t be empty.</errorMessage>
</ValidationRule>